--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,56 +1,36 @@
-# Hugo configuration file
-title: My Site
+baseURL: https://samstalhandske.com/
+languageCode: en-us
+title: Sam Stålhandske
 
-# import hextra as module
 module:
   imports:
-  - path: github.com/imfing/hextra
-
-markup:
-  # allow raw html
-  goldmark:
-    renderer:
-      unsafe: true
-
-  # enable hextra syntax highlight
-  highlight:
-    noClasses: false
-
+    - path: github.com/imfing/hextra
+    
 menu:
   main:
-    - name: Docs
-      pageRef: /docs
+    - name: Tags
+      pageRef: /tags
       weight: 1
+    - name: Projects
+      pageRef: /projects
+      weight: 2
     - name: About
       pageRef: /about
-      weight: 2
-    - name: Contact ↗
-      url: "https://github.com/imfing"
       weight: 3
-    - name: Search
+    - name: Contact
+      pageRef: /contact
       weight: 4
+    - name: Search
+      weight: 5
       params:
         type: search
-    - name: GitHub
-      weight: 5
-      url: "https://github.com/imfing/hextra-starter-template"
-      params:
-        icon: github
-    - name: Twitter
-      weight: 6
-      url: "https://twitter.com/"
-      params:
-        icon: x-twitter
-
+        
 params:
-  navbar:
-    displayTitle: true
-    displayLogo: false
-
-  footer:
-    displayCopyright: false
-    displayPoweredBy: true
-
-  editURL:
-    enable: true
-    base: "https://github.com/imfing/hextra-starter-template/edit/main/content"
+    theme:
+        default: system
+    navbar:
+        displayTitle: true
+        displayLogo: false
+    footer:
+        displayCopyright: true
+        displayPoweredBy: false
