Try updating pages.yaml so page-navigation works.

--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -56,8 +56,7 @@ jobs:
           HUGO_ENV: production
         run: |
           hugo \
-            --gc --minify \
-            --baseURL "${{ steps.pages.outputs.base_url }}/"
+            --gc --minify
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
