--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -56,7 +56,8 @@ jobs:
           HUGO_ENV: production
         run: |
           hugo \
-            --gc --minify
+            --gc --minify \
+            --baseURL "${{ steps.pages.outputs.base_url }}/"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
